--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/chrome": "^0.0.268",
-    "@types/node": "^20.14.9",
-    "chrome-types": "^0.1.290",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-ts": "1.3.2-1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.268",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "chrome-types": "^0.1.290",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-ts": "1.3.2-1"
   }
 }
