--- a/package.json
+++ b/package.json
@@ -14,19 +14,28 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^5.49.2",
+    "@types/axios": "^0.14.0",
     "@types/chrome": "^0.0.268",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "ant-design": "^1.0.0",
+    "axios": "^1.7.2",
     "chrome-types": "^0.1.290",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "lodash": "^4.17.21",
+    "styled-component": "^2.8.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-ts": "1.3.2-1"
+    "vite-plugin-ts": "1.3.2-1",
+    "zustand": "^4.5.4"
   }
 }
