feat: chakra-ui 적용

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.49.2",
     "@types/axios": "^0.14.0",
     "@types/chrome": "^0.0.268",
@@ -30,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "framer-motion": "^11.2.12",
     "lodash": "^4.17.21",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
