--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
     "@tanstack/react-query": "^5.49.2",
     "@types/axios": "^0.14.0",
     "@types/chrome": "^0.0.268",
