--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "framer-motion": "^11.2.12",
     "lodash": "^4.17.21",
+    "styled-components": "^6.1.11",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-ts": "1.3.2-1",
