--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.49.2",
     "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.35",
     "@types/chrome": "^0.0.268",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
@@ -30,6 +31,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.7.2",
+    "cheerio": "1.0.0-rc.12",
     "chrome-types": "^0.1.290",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
