--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.7.2",
-    "zustand": "^4.5.4",
-    "framer-motion": "^11.2.12",
-    "styled-components": "^6.1.11",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
     "@tanstack/react-query": "^5.49.2",
-    "lodash": "^4.17.21"
+    "axios": "^1.7.2",
+    "framer-motion": "^11.2.12",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.11",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
