--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.35",
     "@types/chrome": "^0.0.268",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
