--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
+    "cheerio": "1.0.0-rc.12",
     "framer-motion": "^11.2.12",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
