--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@egjs/grid": "^1.16.0",
+    "@egjs/react-grid": "^1.17.0",
     "@emotion/react": "^11.11.4",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
