feat: swith 컴포넌트로 라이트/다크 모드 토글 기능 구현

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
     "service_worker": "background.js"
   },
 
-  "permissions": ["bookmarks"],
+  "permissions": ["bookmarks", "localStorage"],
 
   "chrome_url_overrides": {
     "newtab": "index.html"
