--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sanitize.css": "^13.0.0",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
